# awgn-fbl

./: .gitignore  ARCHITECTURE.md  README.md  RESULTS.md  generate_chapter_figures.py  pyproject.toml  requirements.txt
analysis/: sanity_check.py  stress_plots.py  verify_ahmed.py
awgn_fbl/: __init__.py  _pairwise.py  achievable.py  capacity.py  converse.py  erseghe.py  fast_f.py  normal_approx.py  plot.py
docs/chapter/: _preamble.tex  chapter_awgn.tex  main.tex
docs/diagrams/: 01_architecture.mmd  02_nct_flow.mmd  03_rcu_pipeline.mmd  04_bounds_map.mmd  05_class_hierarchy.mmd  _render.py
docs/notes/: alternative-evaluations.md  kappabeta-log-domain.md
plots/stress/: _sanity_report.csv  _summary_table.csv
plots/stress/edge/extreme_snr/: n1000.csv  n200.csv
plots/stress/edge/gallager_regime/: snr0_eps1e-3.csv
plots/stress/edge/high_rate_waterfall/: n1000.csv  n200.csv
plots/stress/edge/large_n/: snr+3dB.csv  snr+6dB.csv  snr+9dB.csv
plots/stress/edge/low_rate_waterfall/: n200_R0.05.csv
plots/stress/edge/small_n/: eps1e-03.csv  eps1e-06.csv
plots/stress/edge/tiny_eps/: n200.csv  n500.csv
plots/stress/inversions/error_vs_n/: snr+0_R0.10.csv  snr+0_R0.30.csv  (+4 more)
tests/: README.md  test_ahmed.py  test_converse.py  test_converse_log_domain.py  test_erseghe.py  test_exact_random_coding.py  test_fast_F_evaluator.py  test_gallager.py  test_gallager_logdomain.py  test_kappabeta.py  test_kappabeta_logdomain.py  test_kappabeta_v2.py  test_log_domain.py  test_normal_approximation.py  test_rcu_achievable.py  test_rcu_log_domain.py  test_rcu_verification.py
(+61 files in other folders)
