[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awgn_fbl"
version = "0.1.0"
description = "Finite-blocklength converse and achievability bounds for the real-valued AWGN channel"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nir Elkayam", email = "nir.elkayam@gmail.com" }]
keywords = [
    "information-theory",
    "finite-blocklength",
    "awgn",
    "channel-coding",
    "converse-bounds",
    "achievability-bounds",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/nire123/awgn-fbl"
Repository = "https://github.com/nire123/awgn-fbl"

[tool.setuptools]
packages = ["awgn_fbl"]
